ui/cap-react/src/styles/styles.scss
/* Variables */
$vin-blue: #5bb7db;
$vin-green: #60b044;
$vin-red: #ff0000;

@font-face {
  font-family: CAPFont;
  src: url("../fonts/Web-Regular.eot");
  src: url("../fonts/Web-Regular.eot") format("embedded-opentype"),
    url("../fonts/Web-RegularItalic.eot") format("embedded-opentype"),
    url("../fonts/Web-Regular.woff") format("woff"),
    url("../fonts/Web-RegularItalic.woff") format("woff");
}
//@import '~grommet/scss/vanilla/index';

/* Styles */
html,
body {
  height: 100vh;
  width: 100vw;
}

body .grommet {
  font: 14px CAPFont;
}

#app {
  height: 100vh;
  overflow-y: scroll;
}

#app-main {
  height: 100%; /*allows both columns to span the full height of the browser window*/
  display: flex;
  flex-direction: column;
}

#header {
  height: 55.97px;
  flex-shrink: 0;
  display: inline-flex;
}

label {
  margin-bottom: 0.15em;
}

#main-container {
  flex-grow: 1; /*ensures that the container will take up the full height of the parent container*/
  overflow-y: auto; /*adds scroll to this container*/
  height: 100%;
  display: flex;
}

.rjsf {
  display: flex;
  flex-direction: column;
  flex: 1;
  padding-bottom: 5px;

  .cap-grommet-input {
    input {
      border: 0 !important;
    }
    input:focus {
      padding: "11px 23px";
      border: 0 !important;
    }
  }
}

.cap-async-select-input {
  > div > div {
    border: 0 !important;
  }
}

.rjsf-condenced {
  height: auto;
}

.menuItem::after {
  content: "";
  display: block;
  width: 0;
  height: 1px;
  background: #000;
  transition: width 0.3s;
}

.menuItem:hover::after {
  width: 100%;
  transition: width 0.3s;
}


//  pagination
#react-paginate ul {
  display: inline-block;
  padding:5px 10px;
  background:#f5f5f5;
}

#react-paginate li {
  display: inline-block;
  margin: 0 2px;
  background:#ffffff;
  padding: 3px 10px;
} 


.search_loading_title{
  height:20px;
  background:#f5f5f5;
  width:20%;
  position: relative;
  overflow:hidden;
  margin-bottom: 5px;
}

.search_loading_title::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 20px;
  width:220px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}


.search_loading_large_box{
  height:40px;
  background:#f5f5f5;
  width:20%;
  position: relative;
  overflow:hidden;
  margin-bottom: 5px;
}

.search_loading_large_box::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 40px;
  width:220px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}


.search_loading_date{
  height:20px;
  width:12%;
  background:#f5f5f5;
  position: relative;
  overflow:hidden;
}

.search_loading_date::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 20px;
  width:120px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}

.search_loading_tag{
  height:20px;
  background:#f5f5f5;
  width:5%;
  position: relative;
  overflow:hidden;
}

.search_loading_tag::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 20px;
  width:50px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}

.search_loading_description{
  height:40px;
  width:960px;
  background:#f5f5f5;
  position: relative;
  overflow:hidden;
}


.search_loading_description::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 40px;
  width:1000px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}


.search_facet_title{
  height:25px;
  background:#ebe6e6;
  width:40%;
  position: relative;
  overflow:hidden;
  
}

.search_facet_title::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 25px;
  width:160px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}

.search_facet_listitem{
  height:25px;
  background:#ebe6e6;
  width:40%;
  position: relative;
  overflow:hidden;
  margin-bottom: 5px;
}

.search_facet_listitem::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 25px;
  width:160px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}


.search_facet_heading{
  height:20px;
  background:#ebe6e6;
  width:20%;
  position: relative;
  overflow:hidden;
  margin-bottom: 5px;
}

.search_facet_heading::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 20px;
  width:160px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}

.search_facet_toggle{
  height:20px;
  background:#ebe6e6;
  width:50%;
  position: relative;
  overflow:hidden;
  margin-bottom: 5px;
}

.search_facet_toggle::before{
  content:"";
  position: absolute;
  top:0;
  left:0;
  height: 20px;
  width:160px;
  background: linear-gradient(to right, #f5f5f5, #f0e9e9, #f5f5f5);
  animation: loading 2s infinite ease-in-out;
}

@keyframes loading {
  0% {
    transform: translateX(0);
  }
  50%,
  100% {
    transform: translateX(100%);
  }
}


#search_layer .grommetux-layer__container{
  background:rgb(245,245,245)
}

.search_toggles .grommetux-check-box--toggle .grommetux-check-box__control{
  height: 10px !important;
  width: 44px !important;
}


.search_toggles .grommetux-check-box--toggle .grommetux-check-box__control:after{
  height: 20px !important;
  width: 20px !important;
  top: -5px !important;
}


.search_facets .grommetux-check-box__control{
  border-radius: 0px !important;
  border: 1px solid #666;
  height:16px !important;
  width:16px !important;
  margin-right: 8px !important;
}
.search_facets .grommetux-check-box__control-check{
  height:16px !important;
  width:16px !important;

  top: -1px !important;
  left: -1px !important;
}

.search_facets .grommetux-check-box__label{
  line-height: 1.3 !important;
  font-size: 1.4em;
}


// xsmall
@media only screen and (min-width: 320px) {
  
  .md-row {
    flex-direction: row !important;
    justify-content: space-around;
    align-items: center;
  }
  .jst-md-center {
    justify-content: center;
  }
  .width-100 {
    width: 100% !important;
  }
  
  .sm-order-1{
    order:2;  
    margin: 50px 10px 50px 10px;
  }
  .sm-order-2{
    order:1;
    margin: 50px 10px 0px 10px;
  }
  .sm-order-3{
    order:3;
    margin: 0px 10px 50px 10px;
  }
  
  .sm-order-4{
    order:4;
    margin: 0px 10px 50px 10px;
  }

  .dashboard-meter ul li {
    flex-direction: row !important;
  }

  #sidebar{
    display: none;
  }


  #sidebar_button{
    display: flex
  }

  .search_result_box{
    min-width:315px !important;
    max-width: 570px !important;
    overflow: visible;
  }


}

@media only screen and (min-width: 480px) {
  .search_result_box{
    min-width: 450px !important;
  }
}



// small
@media only screen and (min-width: 580px) {
  .sm-order-2{
    order:1;
  }
  .sm-order-1{
    order:2;
  }
  .md-column {
    display: flex;
    flex-direction: column !important;
  }

  .search_result_box{
    min-width: 550px !important;
  }

  
}

// medium
@media only screen and (min-width: 720px) {
  .sm-order-1{
    order:1;
    margin: 0;
  }
  .sm-order-2{
    order: 2;
    margin:0;
  }

  .sm-order-3{
    margin: 0;
  }

  .sm-order-4{
    margin: 0;
  }
  .md-row {
    flex-direction: column !important;
    justify-content: flex-start;
  }
  .jst-md-center {
    justify-content: flex-start;
  }
  .lg-column {
    flex-direction: column !important;
  }
  .lg-row {
    width: auto !important;
  }
  
  .search_result_box{
    min-width: 690px !important;
  }

}
@media only screen and (min-width: 992px) {
  .search_result_box{
    min-width: 615px !important;
  }

  #sidebar{
    display:flex;
  }

  #sidebar_button{
    display: none
  }
}


// large
@media only screen and (min-width: 1179px) {


  .search_result_box{
    min-width: 800px !important;
  }

  .lg-column {
    flex-direction: row !important;
  }
  .lg-row {
    flex-direction: column !important;
  }
}

// xlarge
@media only screen and (min-width: 1330px) {
  .md-column {
    display: flex;
    flex: 1;
    flex-direction: row !important;
  }



}

